White Space Issue from #1805

--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -24,8 +24,8 @@
        width: auto;
    }
 
-   .tab-pane {
-       min-height: auto;
+   .tab-content > .tab-pane {
+       min-height: inherit!important;
    }
 
    .tab-contents{
